OCaml/mini-c/tests/typing/bad/testfile-call-2.c

int f(int x) {}
int main() { f(1, 2); }

